modify_func_error

--- a/tale_re/new_recommendation.ipynb
+++ b/tale_re/new_recommendation.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "907ca2cb-f91d-4b36-83c5-076f45d7a475",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "69860929-82eb-4098-9cad-02e32df6a28c",
    "metadata": {
     "colab": {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "ee32c653-b5ca-42f8-b331-70cd63d82a54",
    "metadata": {
     "colab": {
@@ -186,7 +186,7 @@
        "4  그림형제동화               ['소시지', '생쥐', '새', '뗄감', '요리', '후회']  숲속  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "d0901a63-59d4-48b9-86bd-4e401eed865f",
    "metadata": {},
    "outputs": [],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "d04da456-578b-49d1-8d94-5efc6af3c89f",
    "metadata": {
     "scrolled": true
@@ -249,7 +249,7 @@
        "Name: Tokens, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "36ca8193-3330-4367-9e3d-ef6d20619e4a",
    "metadata": {},
    "outputs": [],
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "b29f8b75-825a-4edb-8c33-8078e4d15bb5",
    "metadata": {
     "scrolled": true
@@ -471,7 +471,7 @@
        "[5 rows x 5000 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "c717f5c1-8d63-4b5b-9801-cdd66f9207c4",
    "metadata": {
     "scrolled": true
@@ -901,7 +901,7 @@
        "NearestNeighbors(algorithm='kd_tree')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "f3878006-ed5f-481b-8b96-7e29227bd7ac",
    "metadata": {
     "scrolled": true
@@ -926,7 +926,7 @@
        " array([[  0,  21, 204,  18, 238]], dtype=int64))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "647d0634-13f3-48b1-809a-1e731696caa3",
    "metadata": {},
    "outputs": [
@@ -1044,7 +1044,7 @@
        "238  [떡갈나무, 꼭대기, 독수리, 둥지, 그, 나무, 줄기, 중간, 고양이, 보금자리,...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "f5250d47-4edb-4570-95d6-241e54f0a9ee",
    "metadata": {
     "scrolled": true
@@ -1064,16 +1064,16 @@
     {
      "data": {
       "text/plain": [
-       "'독수리와 고양이와 암멧돼지'"
+       "'여우와 고양이'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['제목'].iloc[result[1][0][4]]"
+    "df['제목'].iloc[result[1][0][1]]"
    ]
   },
   {
@@ -1086,15 +1086,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "3299d9f7-62ed-4a79-b407-b87cd4646e67",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import os, sys\n",
+    "import numpy as np\n",
+    "import warnings\n",
+    "import matplotlib.pyplot as plt\n",
+    "import re\n",
+    "import squarify\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import spacy\n",
+    "from spacy.tokenizer import Tokenizer\n",
+    "from konlpy.tag import Okt\n",
+    "import re\n",
+    "\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "# 함수 토큰화 및 명사 저장 함수\n",
     "def tokenize_test(text):\n",
+    "    okt = Okt()\n",
     "    # 줄바꿈 제거\n",
     "    text = text.replace(\"\\n\", \" \")\n",
     "\n",
@@ -1112,7 +1133,7 @@
     "\n",
     "\n",
     "# 유사한 동화 제목을 추천하여 csv파일로 저장하는 코드\n",
-    "def tale_recommendation():\n",
+    "def tale_recommendation(df):\n",
     "    tfidf = TfidfVectorizer(tokenizer = tokenize_test,\n",
     "                       ngram_range = (1,2),\n",
     "                       max_features = 5000,\n",
@@ -1144,19 +1165,19 @@
     "def main():\n",
     "    # csv 불러오기\n",
     "    df = pd.read_csv('동화데이터_최종.csv')\n",
-    "    okt = Okt()\n",
     "\n",
     "    # 토큰화 내용을 Tokens 열에 추가하기\n",
     "    df['Tokens'] = df['내용'].apply(tokenize_test)\n",
-    "    df = tale_recommendation()\n",
+    "    df = tale_recommendation(df)\n",
+    "    return df\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    main()"
+    "    df = main()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "fad35657-1eba-4617-9add-1e5fdea8f057",
    "metadata": {
     "scrolled": true
@@ -1277,7 +1298,7 @@
        "4  [어리석은 소원, 새사냥꾼과 자고새와 수탉, 생쥐와 도사, 허영심 강한 갈까마귀, ...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "48311903-66b9-45b1-8919-dbc0b7b87b66",
    "metadata": {},
    "outputs": [],
