title_recommendation_func

--- a/tale_re/new_recommendation.ipynb
+++ b/tale_re/new_recommendation.ipynb
@@ -1145,9 +1145,6 @@
     "    nn = NearestNeighbors(n_neighbors=6, algorithm='kd_tree') # 최근접 5이웃\n",
     "    nn.fit(dtm)\n",
     "    \n",
-    "    # result = nn.kneighbors([dtm.iloc[1]]) # 특정 행과 가장 유사한 문서 5개를 찾는다.\n",
-    "    # title = df['제목'].iloc[result[1][0]]\n",
-    "    \n",
     "    token_list = []\n",
     "    # 문서를 자동으로 추가하기\n",
     "    for i in range(len(df)):\n",
@@ -1312,7 +1309,7 @@
    "id": "4cb0872e-6ce1-4941-8de8-7da732e1fbff",
    "metadata": {},
    "source": [
-    "### 동화데이터_최종.csv 파일에 [추천 동화 목록] 열을 새로 생성하여 추천 동화 목록 저장하기"
+    "### 1. 동화데이터_최종.csv 파일에 [추천 동화 목록] 열을 새로 생성하여 추천 동화 목록 저장하기"
    ]
   },
   {
@@ -1324,6 +1321,147 @@
    "source": [
     "df.to_csv('수정된 동화.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5071312-aa7a-4fb0-a393-a9904e21d415",
+   "metadata": {},
+   "source": [
+    "### 2. 비슷한 동화 목록을 csv 파일에 따로 저장하지 않고, db에 저장된 제목과 내용 데이터를 기반으로 함수에 동화 제목을 입력하면 db에 저장된 데이터를 기반으로 결과를 출력하여 화면에 띄우기 \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "de0b3a31-9ad8-4f20-a7f2-1d07a27b7c22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 제목을 입력하면 비슷한 동화 제목 5가지가 출력되게 만들어주세요!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0eab4337-26ff-4dc2-bfd3-97b9d282cc5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 여우와 고양이\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['고양이와 쥐의 파트너십(동반자관계)', '늙은 개 술탄', '여우와 나무꾼', '세 행운아 (삼 형제의 행운)', '여우와 말']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os, sys\n",
+    "import numpy as np\n",
+    "import warnings\n",
+    "import matplotlib.pyplot as plt\n",
+    "import re\n",
+    "import squarify\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import spacy\n",
+    "from spacy.tokenizer import Tokenizer\n",
+    "from konlpy.tag import Okt\n",
+    "import re\n",
+    "\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# 유사한 동화 제목을 추천하여 csv파일로 저장하는 코드\n",
+    "def tale_recommendation(df, tale_title):\n",
+    "    tfidf = TfidfVectorizer()\n",
+    "\n",
+    "    dtm = tfidf.fit_transform(df['내용'])\n",
+    "    dtm = pd.DataFrame(dtm.todense(), columns=tfidf.get_feature_names_out())\n",
+    "\n",
+    "    nn = NearestNeighbors(n_neighbors=6, algorithm='kd_tree') # 최근접 5이웃\n",
+    "    nn.fit(dtm)\n",
+    "\n",
+    "    idx = df[df['제목'] == tale_title].index[0]\n",
+    "    result = nn.kneighbors([dtm.iloc[idx]]) # 특정 행과 가장 유사한 문서 5개를 찾는다.\n",
+    "    one_title = []\n",
+    "    for i in range(1, 6):\n",
+    "        one_title.append(df['제목'].iloc[result[1][0][i]])\n",
+    "    tale_list.append(one_title)\n",
+    "        \n",
+    "    return tale_list\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    # csv 불러오기\n",
+    "    df = pd.read_csv('동화데이터_최종.csv')\n",
+    "\n",
+    "    # 토큰화 내용을 Tokens 열에 추가하기\n",
+    "    tale_title = input()\n",
+    "    df = tale_recommendation(df, tale_title)\n",
+    "    return df\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    tale_list = []\n",
+    "    tale_list = main()\n",
+    "    print(tale_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "af5d39cc-a013-4430-82a4-5d334c532ee4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('동화데이터_최종.csv')\n",
+    "x = df[df['제목'] == '여우와 고양이'].index[0]\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7270dda-8778-4c7a-bcc6-fc76a683ea77",
+   "metadata": {},
+   "source": [
+    "### 벡터화한 정보를 저장해두고 유사도 점수가 가장 높은 것들 가져오기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d85d9801-d35f-40f7-b42a-faffb93b5d00",
+   "metadata": {},
+   "source": [
+    "- 1. 텍스트 벡터화\n",
+    "- 2. 저장\n",
+    "- 3. 입력 시 벡터화 된 것들과 비교하여 출력"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "441454c5-4de9-439b-808b-bcd33696dd72",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
