--- a/tale_re/new_recommendation.ipynb
+++ b/tale_re/new_recommendation.ipynb
@@ -1341,8 +1341,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "10963594-27cf-4c34-afb3-36cadd32952f",
+   "metadata": {},
+   "source": [
+    "### 추천 동화 하나를 추천"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
+   "id": "1a0318f9-ac27-42d3-8726-9563bec20659",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 여우와 고양이\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "고양이와 쥐의 파트너십(동반자관계)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os, sys\n",
+    "import numpy as np\n",
+    "import warnings\n",
+    "import matplotlib.pyplot as plt\n",
+    "import re\n",
+    "import squarify\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import spacy\n",
+    "from spacy.tokenizer import Tokenizer\n",
+    "from konlpy.tag import Okt\n",
+    "import re\n",
+    "\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# 유사한 동화 제목을 추천하여 csv파일로 저장하는 코드\n",
+    "def tale_recommendation(df, tale_title):\n",
+    "    tfidf = TfidfVectorizer()\n",
+    "\n",
+    "    dtm = tfidf.fit_transform(df['내용'])\n",
+    "    dtm = pd.DataFrame(dtm.todense(), columns=tfidf.get_feature_names_out())\n",
+    "\n",
+    "    nn = NearestNeighbors(n_neighbors=6, algorithm='kd_tree') # 최근접 5이웃\n",
+    "    nn.fit(dtm)\n",
+    "\n",
+    "    idx = df[df['제목'] == tale_title].index[0]\n",
+    "    result = nn.kneighbors([dtm.iloc[idx]]) # 특정 행과 가장 유사한 문서 5개를 찾는다.\n",
+    "    one_title = ''\n",
+    "    one_title = df['제목'].iloc[result[1][0][1]]\n",
+    "        \n",
+    "    return one_title\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    # csv 불러오기\n",
+    "    df = pd.read_csv('동화데이터_최종.csv')\n",
+    "\n",
+    "    # 토큰화 내용을 Tokens 열에 추가하기\n",
+    "    tale_title = input()\n",
+    "    df = tale_recommendation(df, tale_title)\n",
+    "    return df\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    tale_list = []\n",
+    "    tale_list = main()\n",
+    "    print(tale_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd38971e-1758-4e19-bcde-013365ca023a",
+   "metadata": {},
+   "source": [
+    "### 추천 동화 5개 추천"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "0eab4337-26ff-4dc2-bfd3-97b9d282cc5d",
    "metadata": {},
    "outputs": [
@@ -1454,14 +1545,6 @@
     "- 2. 저장\n",
     "- 3. 입력 시 벡터화 된 것들과 비교하여 출력"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "441454c5-4de9-439b-808b-bcd33696dd72",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
